# pontuar

./: README.md  main.ipynb  main.py  pyproject.toml
docs/: contabilidade.md
